WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71649
Fix some style issues in ImageBuffer.h
https://bugs.webkit.org/show_bug.cgi?id=71649
Summary
Fix some style issues in ImageBuffer.h
noel gordon
Reported
2011-11-06 21:24:12 PST
Minor ImageBuffer.h style fix
Attachments
Patch
(1.59 KB, patch)
2011-11-06 21:35 PST
,
noel gordon
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
noel gordon
Comment 1
2011-11-06 21:35:23 PST
Created
attachment 113823
[details]
Patch
Kent Tamura
Comment 2
2011-11-06 21:35:58 PST
Comment on
attachment 113823
[details]
Patch ok
WebKit Review Bot
Comment 3
2011-11-06 23:18:30 PST
Comment on
attachment 113823
[details]
Patch Clearing flags on attachment: 113823 Committed
r99397
: <
http://trac.webkit.org/changeset/99397
>
WebKit Review Bot
Comment 4
2011-11-06 23:18:34 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug