Fix some style issues in ImageBuffer.h https://bugs.webkit.org/show_bug.cgi?id=71649

Reviewed by Kent Tamura.

No new tests. Style change only.

* platform/graphics/ImageBuffer.h:


Canonical link: https://commits.webkit.org/87977@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99397 268f45cc-cd09-0410-ab3c-d52691b4dbfc