Source/WebCore/platform/graphics/ImageBuffer.h
@@ -140,11 +140,11 @@ namespace WebCore {
 
         // This constructor will place its success into the given out-variable
         // so that create() knows when it should return failure.
-        ImageBuffer(const IntSize&, ColorSpace colorSpace, RenderingMode renderingMode, bool& success);
+        ImageBuffer(const IntSize&, ColorSpace, RenderingMode, bool& success);
     };
 
 #if USE(CG) || USE(SKIA)
-    String ImageDataToDataURL(const ImageData& input, const String& mimeType, const double* quality);
+    String ImageDataToDataURL(const ImageData&, const String& mimeType, const double* quality);
 #endif
 
 } // namespace WebCore
